syntax = "proto3";
option java_multiple_files = true;
package foodSeller;

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string email = 1;
  string password = 2;
  string phoneNumber = 3;
  string firstName = 4;
  string lastName = 5;
  string name = 6;
  string address = 7;
}

service LoginService
{
  rpc Login(LoginRequest) returns (LoginResponse);
}